# libfvad-jni

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debian.sh  build_macos.sh  build_win.ps1  dockerfile  gen_header.sh  pom.xml
.github/workflows/: main.yml
src/main/java/io/github/givimad/libfvadjni/: VoiceActivityDetector.java
src/main/java/io/github/givimad/libfvadjni/internal/: NativeUtils.java
src/main/native/: io_github_givimad_libfvadjni_VoiceActivityDetector.cpp  io_github_givimad_libfvadjni_VoiceActivityDetector.h
src/main/resources/: LICENSE
src/test/java/io/github/givimad/libfvadjni/: VoiceActivityDetectorTest.java
